feat: discontinue claim event for solicitor role (CMC-72)